--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 
     <!--modal carrinho-->
 
-    <div class="bg-black/60 w-full h-full fixed top-0 left-0 z-{99} items-center justify-center hidden" id="cart-modal">
+    <div class="bg-black/60 w-full h-full fixed top-0 left-0 z-{99} items-center justify-center overflow-y-auto hidden" id="cart-modal">
         <div class="bg-white p-5 rounded-md min-w-[90%] md:min-w-[600px]">
             <h2 class="text-center font-bold text-2xl mb-2">Meu carrinho</h2>
 
@@ -213,7 +213,7 @@
 
     <!--botão carrinho rodapé-->
 
-    <footer class="w-full bg-red-500 py-2 fixed bottom-0 z-40 flex items-center justify-center">
+    <footer class="w-full bg-red-500 py-2 fixed bottom-0 z-40 flex items-center justify-center hidden" id="footer">
         <button class="flex items-center gap-2 text-white font-bold" id="cart-btn">
             (<span id="cart-count">0</span>)
             Ver meu carrinho
