--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
     <!--modal carrinho-->
 
     <div class="bg-black/60 w-full h-full fixed top-0 left-0 z-{99} items-center justify-center overflow-y-auto hidden" id="cart-modal">
-        <div class="bg-white p-5 rounded-md min-w-[90%] md:min-w-[600px]">
+        <div class="bg-white p-5 rounded-md min-w-[90%] md:min-w-[600px] max-h-[85vh] mb-8 overflow-y-auto">
             <h2 class="text-center font-bold text-2xl mb-2">Meu carrinho</h2>
 
             <div id="cart-items" class="flex justify-between mb-2 flex-col"></div>
