--- a/index.html
+++ b/index.html
@@ -141,10 +141,12 @@
             </h2>
         </div>
 
-        <!--Coca Lata-->
+        <!--Refrigerantes-->
 
-        <div class="grid grid-cols-1 md:grid-cols-2 gap-7 md:gap-10 mx-auto max-w-7xl px-2 mb-16" id="menu">
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-7 md:gap-10 mx-auto max-w-7xl px-2 mb-12" id="menu">
             
+            <!--Coca Lata-->
+
             <div class="flex gap-2 w-full">
                 <img src="/assets/coca-lata.png" alt="Coca Lata"
                     class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300">
@@ -356,6 +358,151 @@
                             class="bg-gray-900 px-5 rounded add-to-cart-btn"
                             data-name="H2O Limão 500ml"
                             data-price="6.50"
+                            >
+                            <i class="fa-solid fa-cart-shopping text-lg text-white"></i>
+                        </button>
+                    </div>
+                </div>
+            </div>
+
+
+        </div>
+
+        <div class="flex items-center justify-center mb-14">
+            <h2 class="font-bold text-3xl">
+                Cervejas
+            </h2>
+        </div>
+
+        <!--Cervejas-->
+
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-7 md:gap-10 mx-auto max-w-7xl px-2 mb-16" id="menu">
+           
+            <!--Amstel Lata-->
+
+            <div class="flex gap-2 w-full">
+                <img src="/assets/amstel-lata.png" alt="Amstel Lata"
+                    class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300">
+
+                <div class="w-full">
+                    <p class="font-bold">Amstel Lata</p>
+                    <p class="text-sm">269ml</p>
+                    <div class="flex items-center gap-2 justify-between mt-3">
+                        <p class="font-bold text-lg">R$ 4,00</p>
+                        <button 
+                            class="bg-gray-900 hover:bg-green-500 px-5 rounded add-to-cart-btn"
+                            data-name="Amstel Lata 269ml"
+                            data-price="4"
+                            >
+                            <i class="fa-solid fa-cart-shopping text-lg text-white"></i>
+                        </button>
+                    </div>
+                </div>
+            </div>
+
+            <!--Antarctica Lata-->
+
+            <div class="flex gap-2 w-full">
+                <img src="/assets/antarctica-lata.png" alt="Antarctica Lata"
+                    class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300">
+
+                <div class="w-full">
+                    <p class="font-bold">Antarctica Lata</p>
+                    <p class="text-sm">269ml</p>
+                    <div class="flex items-center gap-2 justify-between mt-3">
+                        <p class="font-bold text-lg">R$ 4,00</p>
+                        <button 
+                            class="bg-gray-900 hover:bg-green-500 px-5 rounded add-to-cart-btn"
+                            data-name="Antarctica Lata 269ml"
+                            data-price="4"
+                            >
+                            <i class="fa-solid fa-cart-shopping text-lg text-white"></i>
+                        </button>
+                    </div>
+                </div>
+            </div>
+
+            <!--Antarctica Original Lata-->
+
+            <div class="flex gap-2 w-full">
+                <img src="/assets/antarctica-original-lata.png" alt="Antarctica Original Lata"
+                    class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300">
+
+                <div class="w-full">
+                    <p class="font-bold">Antarctica Original Lata</p>
+                    <p class="text-sm">269ml</p>
+                    <div class="flex items-center gap-2 justify-between mt-3">
+                        <p class="font-bold text-lg">R$ 4,00</p>
+                        <button 
+                            class="bg-gray-900 hover:bg-green-500 px-5 rounded add-to-cart-btn"
+                            data-name="Antarctica Original Lata"
+                            data-price="4"
+                            >
+                            <i class="fa-solid fa-cart-shopping text-lg text-white"></i>
+                        </button>
+                    </div>
+                </div>
+            </div>
+
+            <!--Brahma Zero lata-->
+
+            <div class="flex gap-2 w-full">
+                <img src="/assets/Brahma-zero-lata.png" alt="Brahma Zero lata"
+                    class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300">
+
+                <div class="w-full">
+                    <p class="font-bold">Brahma Zero lata</p>
+                    <p class="text-sm">350ml</p>
+                    <div class="flex items-center gap-2 justify-between mt-3">
+                        <p class="font-bold text-lg">R$ 6,00</p>
+                        <button 
+                            class="bg-gray-900 hover:bg-green-500 px-5 rounded add-to-cart-btn"
+                            data-name="Brahma Zero lata 350ml"
+                            data-price="6"
+                            >
+                            <i class="fa-solid fa-cart-shopping text-lg text-white"></i>
+                        </button>
+                    </div>
+                </div>
+            </div>
+
+            <!--Heineken Long Neck-->
+
+            <div class="flex gap-2 w-full">
+                <img src="/assets/heineken-long-neck.png" alt="Heineken Long Neck"
+                    class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300">
+
+                <div class="w-full">
+                    <p class="font-bold">Heineken Long Neck</p>
+                    <p class="text-sm">330ml</p>
+                    <div class="flex items-center gap-2 justify-between mt-3">
+                        <p class="font-bold text-lg">R$ 9,00</p>
+                        <button 
+                            class="bg-gray-900 hover:bg-green-500 px-5 rounded add-to-cart-btn"
+                            data-name="Heineken Long Neck 330ml"
+                            data-price="9"
+                            >
+                            <i class="fa-solid fa-cart-shopping text-lg text-white"></i>
+                        </button>
+                    </div>
+                </div>
+            </div>
+
+            <!--Kaiser Lata-->
+
+            <div class="flex gap-2 w-full">
+                <img src="/assets/kaiser_lata_350ml.png" alt="Kaiser Lata"
+                    class="w-28 h-28 rounded-md hover:scale-110 hover:-rotate-2 duration-300">
+
+                <div class="w-full">
+                    <p class="font-bold">Kaiser Lata</p>
+                    <p class="text-sm">350ml</p>
+                    <div class="flex items-center gap-2 justify-between mt-3">
+                        <p class="font-bold text-lg">R$ 4,00</p>
+                        <button 
+                            class="bg-gray-900 hover:bg-green-500 px-5 rounded add-to-cart-btn"
+                            data-name="Kaiser Lata 350ml"
+                            data-price="4"
                             >
                             <i class="fa-solid fa-cart-shopping text-lg text-white"></i>
                         </button>
