--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
                     <div class="flex items-center gap-2 justify-between mt-3">
                         <p class="font-bold text-lg">R$ 4,00</p>
                         <button 
-                            class="bg-gray-900 hover:bg-green-500 px-5 rounded add-to-cart-btn"
+                            class="bg-gray-900 hover:bg-green-500 duration-100 px-5 rounded add-to-cart-btn"
                             data-name="Amstel Lata 269ml"
                             data-price="4"
                             >
