--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
                     <div class="flex items-center gap-2 justify-between mt-3">
                         <p class="font-bold text-lg">R$ 4,00</p>
                         <button 
-                            class="bg-gray-900 hover:bg-green-500 duration-100 px-5 rounded add-to-cart-btn"
+                            class="bg-gray-900 px-5 rounded add-to-cart-btn"
                             data-name="Amstel Lata 269ml"
                             data-price="4"
                             >
@@ -412,7 +412,7 @@
                     <div class="flex items-center gap-2 justify-between mt-3">
                         <p class="font-bold text-lg">R$ 4,00</p>
                         <button 
-                            class="bg-gray-900 hover:bg-green-500 px-5 rounded add-to-cart-btn"
+                            class="bg-gray-900 px-5 rounded add-to-cart-btn"
                             data-name="Antarctica Lata 269ml"
                             data-price="4"
                             >
@@ -434,7 +434,7 @@
                     <div class="flex items-center gap-2 justify-between mt-3">
                         <p class="font-bold text-lg">R$ 4,00</p>
                         <button 
-                            class="bg-gray-900 hover:bg-green-500 px-5 rounded add-to-cart-btn"
+                            class="bg-gray-900 px-5 rounded add-to-cart-btn"
                             data-name="Antarctica Original Lata"
                             data-price="4"
                             >
@@ -456,7 +456,7 @@
                     <div class="flex items-center gap-2 justify-between mt-3">
                         <p class="font-bold text-lg">R$ 6,00</p>
                         <button 
-                            class="bg-gray-900 hover:bg-green-500 px-5 rounded add-to-cart-btn"
+                            class="bg-gray-900 px-5 rounded add-to-cart-btn"
                             data-name="Brahma Zero lata 350ml"
                             data-price="6"
                             >
@@ -478,7 +478,7 @@
                     <div class="flex items-center gap-2 justify-between mt-3">
                         <p class="font-bold text-lg">R$ 9,00</p>
                         <button 
-                            class="bg-gray-900 hover:bg-green-500 px-5 rounded add-to-cart-btn"
+                            class="bg-gray-900 rounded add-to-cart-btn"
                             data-name="Heineken Long Neck 330ml"
                             data-price="9"
                             >
@@ -500,7 +500,7 @@
                     <div class="flex items-center gap-2 justify-between mt-3">
                         <p class="font-bold text-lg">R$ 4,00</p>
                         <button 
-                            class="bg-gray-900 hover:bg-green-500 px-5 rounded add-to-cart-btn"
+                            class="bg-gray-900 px-5 rounded add-to-cart-btn"
                             data-name="Kaiser Lata 350ml"
                             data-price="4"
                             >
