--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
                     <div class="flex items-center gap-2 justify-between mt-3">
                         <p class="font-bold text-lg">R$ 9,00</p>
                         <button 
-                            class="bg-gray-900 rounded add-to-cart-btn"
+                            class="bg-gray-900 px-5 rounded add-to-cart-btn"
                             data-name="Heineken Long Neck 330ml"
                             data-price="9"
                             >
