--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <!-- Botões de filtro -->
     <div class="flex justify-center gap-2 my-6 w-full overflow-x-auto scrollbar-hide">
         <button 
-            class="px-5 py-2 bg-red-900 text-white rounded-full hover:bg-red-950 filter-btn" 
+            class="px-5 py-2 ml-10 bg-red-900 text-white rounded-full hover:bg-red-950 filter-btn" 
             data-filter="all">
             Todos
         </button>
