--- a/index.html
+++ b/index.html
@@ -41,30 +41,30 @@
 <!-- Container dos Botões -->
 <div class="overflow-hidden">
     <!-- Botões de filtro -->
-    <div class="flex justify-center gap-2 my-6 w-full overflow-x-auto scrollbar-hide">
+    <div class="flex justify-start md:justify-center gap-2 my-6 w-full overflow-x-auto scrollbar-hide px-4">
         <button 
-            class="px-5 py-2 ml-10 bg-red-900 text-white rounded-full hover:bg-red-950 filter-btn" 
+            class="flex-shrink-0 px-5 py-2 bg-red-900 text-white rounded-full hover:bg-red-950 filter-btn" 
             data-filter="all">
             Todos
         </button>
         <button 
-            class="px-5 py-2 bg-red-900 text-white rounded-full hover:bg-red-950 filter-btn" 
+            class="flex-shrink-0 px-5 py-2 bg-red-900 text-white rounded-full hover:bg-red-950 filter-btn" 
             data-filter="Lanches">
             Lanches
         </button>
         <button 
-            class="px-5 py-2 bg-red-900 text-white rounded-full hover:bg-red-950 filter-btn" 
+            class="flex-shrink-0 px-5 py-2 bg-red-900 text-white rounded-full hover:bg-red-950 filter-btn" 
             data-filter="refrigerantes">
             Refrigerantes
         </button>
         <button 
-            class="px-5 py-2 bg-red-900 text-white rounded-full hover:bg-red-950 filter-btn" 
+            class="flex-shrink-0 px-5 py-2 bg-red-900 text-white rounded-full hover:bg-red-950 filter-btn" 
             data-filter="cervejas">
             Cervejas
         </button>
-        
     </div>
-  </div>
+</div>
+
   
 
 <div class="flex items-center justify-center mb-12 mt-12">
