--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
     
         <div class="flex items-center justify-center mb-14 mt-9" data-category="Lanches">
-            <h2 class="font-bold text-3xl" data-category="Lanches">
+            <h2 class="font-bold text-3xl">
                 Lanches
             </h2>
         </div>
@@ -412,7 +412,7 @@
 
         <!--Cervejas-->
 
-        <div class="grid grid-cols-1 md:grid-cols-2 gap-7 md:gap-10 mx-auto max-w-7xl px-2 mb-16">
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-7 md:gap-10 mx-auto max-w-7xl px-2 mb-16" data-category="cervejas">
            
             <!--Amstel Lata-->
 
