--- a/index.html
+++ b/index.html
@@ -795,6 +795,8 @@
             <h2 class="text-center font-bold text-2xl mb-2">Meu carrinho</h2>
 
             <div id="cart-items" class="flex justify-between mb-2 flex-col"></div>
+
+            <p class="text-sm font-medium mt-6">Taxa de entrega: R$ 5,00</p>
             
             <p class="font-bold mt-3">Total: <span id="cart-total" class="text-green-800 rounded">0.00</span></p>
                          
