--- a/index.html
+++ b/index.html
@@ -796,7 +796,27 @@
 
             <div id="cart-items" class="flex justify-between mb-2 flex-col"></div>
 
-            <p class="text-sm font-medium mt-6">Taxa de entrega: R$ 5,00</p>
+            <p class="font-bold mt-4 mb-2">Escolha o método:</p>
+            <div>
+                <label>
+                    <input 
+                        type="radio" 
+                        name="delivery-method" 
+                        id="pickup-option" 
+                        value="pickup" 
+                        checked 
+                    > Retirar no local
+                </label>
+                <label class="ml-4">
+                    <input 
+                        type="radio" 
+                        name="delivery-method" 
+                        id="delivery-option" 
+                        value="delivery" 
+                    > Entrega R$ 5,00
+                </label>
+            </div>
+
             
             <p class="font-bold mt-3">Total: <span id="cart-total" class="text-green-800 rounded">0.00</span></p>
                          
