--- a/index.html
+++ b/index.html
@@ -829,13 +829,13 @@
                 class="w-full border-2 p-1 rounded my-1"
             >
       
-            <p class="font-bold mt-4 mb-2">Endereço de entrega:</p>
+            <p class="font-bold mt-4 mb-2 hidden" id="addressname">Endereço de entrega:</p>
             
             <input 
                 type="text"
                 placeholder="Digite seu endereço completo" 
                 id="address"
-                class="w-full border-2 p-1 rounded my-1"
+                class="w-full border-2 p-1 rounded my-1 hidden"
             >
 
             <div class="flex items-center justify-between mt-5 w-full">
